Fix wrapper markup and spacing controls

--- a/assets/js/blocks/order-confirmation/status/style.scss
+++ b/assets/js/blocks/order-confirmation/status/style.scss
@@ -1,5 +1,6 @@
 .wc-block-order-confirmation-status {
-	margin: $gap 0;
+	margin-top: $gap;
+	margin-bottom: $gap;
 	p {
 		margin: 0;
 	}
